[package]
name = "sqlx_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres","all-types","macros" ] }
tokio = { version = "1", features = ["full"] }
#时间
chrono = {version = "0.4.19",features=["serde"]}
#序列化
serde = {version = "1.0.140",features=["derive"]}
serde_json = "1.0.82"